# universal_robot

ur_e_description/: CMakeLists.txt  package.xml
ur_e_description/cfg/: view_robot.rviz2
ur_e_description/launch/: view_ur3e.py  view_ur5e.py
ur_e_description/urdf/: ur5e_robot.urdf
ur_msgs/: CMakeLists.txt  package.xml
ur_msgs/msg/: MasterboardDataMsg.msg
